--- a/index.html
+++ b/index.html
@@ -386,10 +386,10 @@
         // ローカル画像を読み込む
         function loadLocalImages() {
             const imagePaths = [
-                '画像/Canva修正/001.png'
+                'images/001.png'
                 // 他の画像がある場合はここに追加
-                // '画像/Canva修正/002.png',
-                // '画像/Canva修正/003.png'
+                // 'images/002.png',
+                // 'images/003.png'
             ];
 
             let loadedCount = 0;
