--- a/index.html
+++ b/index.html
@@ -450,8 +450,17 @@
         let clearedStages = []; // クリアしたステージ情報
         
         // 画像タイトル
-        // 画像の詳細情報（提供者情報と感謝メッセージ）
-        const imageDetails = [
+const imageTitles = [
+    'あばれ祭り',
+    '桜舞う春',
+    '夏の花火',
+    '紅葉の山',
+    '雪化粧'
+    // 画像を追加した時はここにもタイトルを追加
+];
+
+// 画像の詳細情報（提供者情報と感謝メッセージ）
+const imageDetails = [
             {
                 title: 'あばれ祭り',
                 type: 'original', // あきらちゃん作成
