--- a/index.html
+++ b/index.html
@@ -433,6 +433,10 @@
                 
                 <p><span id="final-moves"></span>回で完成させました</p>
             </div>
+            <div id="unlock-message" class="new-unlock-message" style="display: none;">
+    <h3>🆕 新しい絵柄をゲット！ 🆕</h3>
+    <p id="unlock-title"></p>
+    </div>
             <button class="button" onclick="goToPictureSelect()">次のパズルに挑戦</button>
             <button class="button back-button" onclick="goToTitle()">タイトルに戻る</button>
         </div>
