--- a/index.html
+++ b/index.html
@@ -453,70 +453,84 @@
         let unlockedPictures = [0]; // 最初は001だけアンロック
         let clearedStages = []; // クリアしたステージ情報
         
-        // 🆕 画像タイトル（10個に拡張）
+        // ✏️ 画像タイトル（10個に拡張）
+        // ここを編集して画像のタイトルを変更できます
         const imageTitles = [
-            'あばれ祭り',      // 001.png
-            '桜舞う春',        // 002.png
-            '夏の花火',        // 003.png
-            '紅葉の山',        // 004.png
-            '雪化粧',          // 005.png
-            '海辺の夕日',      // 006.png
-            '星空キャンプ',    // 007.png
-            '虹の橋',          // 008.png
-            '秋の収穫祭',      // 009.png
-            '冬のイルミネーション' // 010.png
+            'あばれ祭り',      // 001.png ← ここに画像のタイトルを入力
+            '桜舞う春',        // 002.png ← ここに画像のタイトルを入力
+            '夏の花火',        // 003.png ← ここに画像のタイトルを入力
+            '紅葉の山',        // 004.png ← ここに画像のタイトルを入力
+            '雪化粧',          // 005.png ← ここに画像のタイトルを入力
+            '海辺の夕日',      // 006.png ← ここに画像のタイトルを入力
+            '星空キャンプ',    // 007.png ← ここに画像のタイトルを入力
+            '虹の橋',          // 008.png ← ここに画像のタイトルを入力
+            '秋の収穫祭',      // 009.png ← ここに画像のタイトルを入力
+            '冬のイルミネーション' // 010.png ← ここに画像のタイトルを入力
         ];
 
-        // 🆕 画像の詳細情報（10個に拡張）
+        // ✏️ 画像の詳細情報（提供者と感謝メッセージ）
+        // ここを編集して画像提供者情報と感謝メッセージを変更できます
         const imageDetails = [
+            // 001.png の情報
             {
                 title: 'あばれ祭り',
-                type: 'original',
+                type: 'original',  // あきらちゃん作成の場合は 'original'
                 message: '遊んでくれてありがとう！\n楽しんでもらえて嬉しいです♪'
             },
+            // 002.png の情報
             {
                 title: '桜舞う春',
-                type: 'original',
-                message: '遊んでくれてありがとう！\n楽しんでもらえて嬉しいです♪'
+                type: 'friend',     // お友達提供の場合は 'friend' に変更
+                provider: '太郎くん', // ← ここに提供者名を入力
+                message: 'イラスト提供：太郎くん\nありがとうございます！'
             },
+            // 003.png の情報
             {
                 title: '夏の花火',
-                type: 'original',
+                type: 'original',   // あきらちゃん作成
                 message: '遊んでくれてありがとう！\n楽しんでもらえて嬉しいです♪'
             },
+            // 004.png の情報
             {
                 title: '紅葉の山',
-                type: 'original',
-                message: '遊んでくれてありがとう！\n楽しんでもらえて嬉しいです♪'
+                type: 'friend',     // お友達提供
+                provider: '花子ちゃん', // ← ここに提供者名を入力
+                message: 'イラスト提供：花子ちゃん\nありがとうございます！'
             },
+            // 005.png の情報
             {
                 title: '雪化粧',
-                type: 'original',
+                type: 'original',   // あきらちゃん作成
                 message: '遊んでくれてありがとう！\n楽しんでもらえて嬉しいです♪'
             },
+            // 006.png の情報
             {
                 title: '海辺の夕日',
-                type: 'original',
+                type: 'original',   // あきらちゃん作成
                 message: '遊んでくれてありがとう！\n楽しんでもらえて嬉しいです♪'
             },
+            // 007.png の情報
             {
                 title: '星空キャンプ',
-                type: 'original',
+                type: 'original',   // あきらちゃん作成
                 message: '遊んでくれてありがとう！\n楽しんでもらえて嬉しいです♪'
             },
+            // 008.png の情報
             {
                 title: '虹の橋',
-                type: 'original',
+                type: 'original',   // あきらちゃん作成
                 message: '遊んでくれてありがとう！\n楽しんでもらえて嬉しいです♪'
             },
+            // 009.png の情報
             {
                 title: '秋の収穫祭',
-                type: 'original',
+                type: 'original',   // あきらちゃん作成
                 message: '遊んでくれてありがとう！\n楽しんでもらえて嬉しいです♪'
             },
+            // 010.png の情報
             {
                 title: '冬のイルミネーション',
-                type: 'original',
+                type: 'original',   // あきらちゃん作成
                 message: '遊んでくれてありがとう！\n楽しんでもらえて嬉しいです♪'
             }
         ];
