--- a/index.html
+++ b/index.html
@@ -456,8 +456,8 @@
         // ✏️ 画像タイトル（10個に拡張）
         // ここを編集して画像のタイトルを変更できます
         const imageTitles = [
-            'あばれ祭り',      // 001.png ← ここに画像のタイトルを入力
-            '桜舞う春',        // 002.png ← ここに画像のタイトルを入力
+            'あばれ祭',      // 001.png ← ここに画像のタイトルを入力
+            'みみちゃん',        // 002.png ← ここに画像のタイトルを入力
             '夏の花火',        // 003.png ← ここに画像のタイトルを入力
             '紅葉の山',        // 004.png ← ここに画像のタイトルを入力
             '雪化粧',          // 005.png ← ここに画像のタイトルを入力
@@ -473,16 +473,15 @@
         const imageDetails = [
             // 001.png の情報
             {
-                title: 'あばれ祭り',
+                title: 'あばれ祭',
                 type: 'original',  // あきらちゃん作成の場合は 'original'
                 message: '遊んでくれてありがとう！\n楽しんでもらえて嬉しいです♪'
             },
             // 002.png の情報
             {
-                title: '桜舞う春',
-                type: 'friend',     // お友達提供の場合は 'friend' に変更
-                provider: '太郎くん', // ← ここに提供者名を入力
-                message: 'イラスト提供：太郎くん\nありがとうございます！'
+                title: 'みみちゃん',
+                type: 'original',     // お友達提供の場合は 'friend' に変更
+                message: '我が家の可愛くて凶暴な猫だよ！'
             },
             // 003.png の情報
             {
