--- a/index.html
+++ b/index.html
@@ -411,7 +411,9 @@
             margin: 15px auto;
             background-size: cover;
             background-position: center;
+            background-repeat: no-repeat;
             box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+            display: block;
         }
         
         .thank-you-message {
