--- a/index.html
+++ b/index.html
@@ -414,6 +414,9 @@
             background-repeat: no-repeat;
             box-shadow: 0 5px 15px rgba(0,0,0,0.3);
             display: block;
+            flex-shrink: 0;
+            position: relative;
+            z-index: 10;
         }
         
         .thank-you-message {
