--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
             margin: 20px 0;
             position: relative;
             overflow: hidden;
+            align-items: center;
         }
         
         .picture-title {
