--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
             padding: 10px;
         }
 
+        /* タイトル画面用の背景 */
+        body.title-background {
+            background-image: url('images/title-background.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+
+        /* その他の画面用の背景 */
+        body.game-background {
+            background-image: url('images/game-background.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+
         .game-container {
             background: white;
             border-radius: 20px;
