--- a/index.html
+++ b/index.html
@@ -312,11 +312,9 @@
 
         .game-title {
             font-size: 28px;
-            background: linear-gradient(45deg, #ff6b6b, #3498db);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: transparent;
             margin-bottom: 10px;
+            text-shadow: none;
         }
 
         .subtitle {
