--- a/index.html
+++ b/index.html
@@ -312,15 +312,18 @@
 
         .game-title {
             font-size: 28px;
-            color: transparent;
+            color: #333;
             margin-bottom: 10px;
-            text-shadow: none;
+            text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.8);
+            font-weight: bold;
         }
-
+        
         .subtitle {
-            color: #666;
+            color: #555;
             font-size: 14px;
             margin-bottom: 20px;
+            text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.8);
+            font-weight: bold;
         }
 
         .loading-message {
