--- a/index.html
+++ b/index.html
@@ -1128,6 +1128,11 @@
         // 初期化
         window.onload = function() {
             console.log('ゲーム開始 - ローカル画像を読み込み中...');
+            
+            // 初期状態でタイトル背景を設定
+            document.body.classList.add('title-background');
+            console.log('タイトル背景を設定しました');
+            
             loadGameData(); // セーブデータを読み込み
             loadLocalImages();
         }
