--- a/index.html
+++ b/index.html
@@ -330,6 +330,21 @@
             color: #666;
             font-style: italic;
             margin: 10px 0;
+            text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.8);
+        }
+
+        .title-content {
+            position: absolute;
+            bottom: 30%;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        .start-game-button {
+            font-size: 20px;
+            padding: 20px 40px;
+            min-width: 200px;
+            box-shadow: 0 8px 20px rgba(0,0,0,0.3);
         }
 
         @media (max-width: 480px) {
