--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
             font-family: 'Arial', sans-serif;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             min-height: 100vh;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
             touch-action: manipulation;
             padding: 10px;
             overflow: hidden;
-            position: fixed;
-            width: 100%;
-            height: 100%;
+            margin: 0;
         }
 
         /* タイトル画面用の背景 */
@@ -32,6 +31,7 @@
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
+            background-attachment: fixed;
         }
 
         /* その他の画面用の背景 */
