--- a/index.html
+++ b/index.html
@@ -645,65 +645,54 @@
             // 001.png の情報
             {
                 type: 'original',  // あきらちゃん作成の場合は 'original'
-                message: '遊んでくれてありがとう！\n楽しんでもらえて嬉しいです♪'
+                message: '公園であそんだよ！'
             },
             // 002.png の情報
             {
-                title: 'みみちゃん',
-                type: 'original',     // お友達提供の場合は 'friend' に変更
-                message: '我が家の可愛くて凶暴な猫だよ！'  // ← ここがコメントになります
+                type: 'friend',     // お友達提供の場合は 'friend' に変更
+                message: 'ぶどう狩りに行ってきたよ！'  // ← ここがコメントになります
             },
             // 003.png の情報
             {
-                title: '紅葉の山',
                 type: 'friend',     // お友達提供
-                provider: '花子ちゃん', // ← ここに提供者名を入力
-                message: '素敵な写真をありがとうございます！'  // ← ここがコメントになります
+                provider: 'Arumax', // ← ここに提供者名を入力
+                message: 'ウルトラマン参上！'  // ← ここがコメントになります
             },
             // 004.png の情報
             {
-                title: '紅葉の山',
-                type: 'friend',     // お友達提供
-                provider: '花子ちゃん', // ← ここに提供者名を入力
-                message: '素敵な写真をありがとうございます！'  // ← ここがコメントになります
+                type: 'original',     // あきら
+                message: 'あばれ祭、いってきたよ！'  // ← ここがコメントになります
             },
             // 005.png の情報
             {
-                title: '紅葉の山',
-                type: 'friend',     // お友達提供
-                provider: '花子ちゃん', // ← ここに提供者名を入力
-                message: '素敵な写真をありがとうございます！'  // ← ここがコメントになります
+                type: 'original',     // お友達提供
+                message: 'わいわい祭り、たのしかったね！'  // ← ここがコメントになります
             },
             // 006.png の情報
             {
-                title: '紅葉の山',
                 type: 'friend',     // お友達提供
-                provider: '花子ちゃん', // ← ここに提供者名を入力
-                message: '素敵な写真をありがとうございます！'  // ← ここがコメントになります
+                provider: 'まほちゃん', // ← ここに提供者名を入力
+                message: 'やきマシュマロ、おいしーよ！'  // ← ここがコメントになります
             // 007.png の情報
             {
-                title: '紅葉の山',
                 type: 'friend',     // お友達提供
-                provider: '花子ちゃん', // ← ここに提供者名を入力
-                message: '素敵な写真をありがとうございます！'  // ← ここがコメントになります
+                provider: 'とうごくん', // ← ここに提供者名を入力
+                message: 'サッカーなかま'  // ← ここがコメントになります
             },
             // 008.png の情報
             {
-               title: '紅葉の山',
                 type: 'friend',     // お友達提供
-                provider: '花子ちゃん', // ← ここに提供者名を入力
-                message: '素敵な写真をありがとうございます！'  // ← ここがコメントになります
+                provider: 'ゆりちゃん', // ← ここに提供者名を入力
+                message: 'たいせつな愛犬！'  // ← ここがコメントになります
             },
             // 009.png の情報
             {
-                title: '紅葉の山',
                 type: 'friend',     // お友達提供
                 provider: '花子ちゃん', // ← ここに提供者名を入力
                 message: '素敵な写真をありがとうございます！'  // ← ここがコメントになります
             },
             // 010.png の情報
             {
-                title: '紅葉の山',
                 type: 'friend',     // お友達提供
                 provider: '花子ちゃん', // ← ここに提供者名を入力
                 message: '素敵な写真をありがとうございます！'  // ← ここがコメントになります
