--- a/index.html
+++ b/index.html
@@ -1114,12 +1114,12 @@
                 if (currentImageDetail.type === 'friend') {
                     titleElement.innerHTML = `${currentImageDetail.provider}<span style="font-size: 14px;">より</span>`;
                 } else {
-                    titleElement.innerHTML = `あきらちゃん<span style="font-size: 14px;">より</span>`;
+                    titleElement.innerHTML = `あきら<span style="font-size: 14px;">より</span>`;
                 }
             } else {
                 } else {
                 document.getElementById('thank-you-message').textContent = '遊んでくれてありがとう！';
-                document.getElementById('picture-title').innerHTML = `あきらちゃん<span style="font-size: 14px;">より</span>`;
+                document.getElementById('picture-title').innerHTML = `あきら<span style="font-size: 14px;">より</span>`;
             }
                         
             // ステージクリア情報を保存
