--- a/index.html
+++ b/index.html
@@ -694,8 +694,8 @@
             // 009.png の情報
             {
                 type: 'friend',     // お友達提供
-                provider: '花子ちゃん', // ← ここに提供者名を入力
-                message: '素敵な写真をありがとうございます！'  // ← ここがコメントになります
+                provider: 'ここねちゃん', // ← ここに提供者名を入力
+                message: '姉妹でにっこり'  // ← ここがコメントになります
             },
             // 010.png の情報
             {
