--- a/index.html
+++ b/index.html
@@ -647,6 +647,7 @@
             // 002.png の情報
             {
                 type: 'friend',     // お友達提供の場合は 'friend' に変更
+                provider: 'ゆあはな', // ← ここに提供者名を入力
                 message: 'ぶどう狩りに行ってきたよ！'  // ← ここがコメントになります
             },
             // 003.png の情報
