--- a/index.html
+++ b/index.html
@@ -693,8 +693,8 @@
             // 010.png の情報
             {
                 type: 'friend',     // お友達提供
-                provider: '花子ちゃん', // ← ここに提供者名を入力
-                message: '素敵な写真をありがとうございます！'  // ← ここがコメントになります
+                provider: 'みなしお', // ← ここに提供者名を入力
+                message: '姉妹でピース！'  // ← ここがコメントになります
             }
         ];
 
